fix: add active trip in route
